--- a/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj.filters
+++ b/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj.filters
@@ -186,6 +186,9 @@
     <ClCompile Include="..\..\..\..\Source\Hints.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\Source\PlayWav.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Library Include="..\..\..\..\..\amjulib\3rdPartyLibs\Bass\Bass2.3\Win\bass.lib">
@@ -311,6 +314,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\Source\Hints.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\Source\PlayWav.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
