--- a/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
+++ b/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
@@ -268,6 +268,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\Source\BassPlayMidi.cpp" />
+    <ClCompile Include="..\..\..\..\Source\CorridorCamController.cpp" />
     <ClCompile Include="..\..\..\..\Source\CorridorMode.cpp" />
     <ClCompile Include="..\..\..\..\Source\CorridorModeEnterClassroom.cpp" />
     <ClCompile Include="..\..\..\..\Source\CorridorModeEnterTappable.cpp" />
@@ -350,6 +351,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Source\Consts.h" />
+    <ClInclude Include="..\..\..\..\Source\CorridorCamController.h" />
     <ClInclude Include="..\..\..\..\Source\CorridorMode.h" />
     <ClInclude Include="..\..\..\..\Source\CorridorModeEnterClassroom.h" />
     <ClInclude Include="..\..\..\..\Source\CorridorModeEnterTappable.h" />
@@ -423,6 +425,7 @@
     <Text Include="..\..\..\..\Assets\Gui\blackboard_erase.txt" />
     <Text Include="..\..\..\..\Assets\Gui\boilerplate.txt" />
     <Text Include="..\..\..\..\Assets\Gui\compound_glyphs.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\corridor_mode_show_tappable.txt" />
     <Text Include="..\..\..\..\Assets\Gui\corridor_mode_wait.txt" />
     <Text Include="..\..\..\..\Assets\Gui\gs-first-user.txt" />
     <Text Include="..\..\..\..\Assets\Gui\gs_about.txt" />
