Attempt to match 2D and 3D tappable images

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Source/ThirdParty/googletest/msvc/gtest.v12.suo
 *.jbf
 Script/Msvc/AmjulaMusicTheory/.vs/
 Assets/Maya/.mayaSwatches/
+Assets/obj/.mayaSwatches/
