--- a/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
+++ b/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
@@ -478,6 +478,8 @@
     <Text Include="..\..\..\..\Assets\Gui\stroke-test-1.txt" />
     <Text Include="..\..\..\..\Assets\Gui\stroke-test-2.txt" />
     <Text Include="..\..\..\..\Assets\Gui\stroke-tick-1.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\tap-picture-note-lengths.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\tap-picture-note-lengths-quavers.txt" />
     <Text Include="..\..\..\..\Assets\Gui\tappables.txt" />
     <Text Include="..\..\..\..\Assets\Gui\text_bg_landscape.txt" />
     <Text Include="..\..\..\..\Assets\Gui\title-text.txt" />
